@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-18T08:13:55Z",
+  "timestamp" : "2022-06-18T16:14:35Z",
   "count_outdated" : 341,
   "uniques_outdated" : 183,
-  "count" : 369,
-  "uniques" : 200,
+  "count" : 370,
+  "uniques" : 201,
   "clones" : [
     {
       "timestamp": "2022-06-04T00:00:00Z",
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-06-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
