@@ -1,5 +1,5 @@
 {
-  "count": 28,
+  "count": 29,
   "uniques": 4,
   "clones": [
     {
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2022-06-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-18T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
