@@ -1,3 +1,10 @@
+2022-06-18T16:14:35Z:
+* notice: last 14d: unq all: 4 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 183 341 / 200 369
+* notice: next accum: outdated-unq outdated-all / unq all: 183 341 / 201 370
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-18]
+
 2022-06-18T08:13:55Z:
 * notice: last 14d: unq all: 4 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 183 341 / 200 370
